--- a/wp-content/themes/intrepid/css/templates/build-boat.scss
+++ b/wp-content/themes/intrepid/css/templates/build-boat.scss
@@ -100,6 +100,7 @@
 
 .step-nagivation {
     padding: 18px 0 10px;
+
     @media #{$phone} {
         display: none;
     }
@@ -122,6 +123,10 @@
         }
 
         @media #{$phone} {
+            display: none;
+        }
+
+        .bab-form-submitted & {
             display: none;
         }
     }
@@ -924,6 +929,37 @@
     .container {
         max-width: 820px;
     }
+
+    .gform_confirmation_message {
+        @include fsz(26px);
+        text-align: center;
+        font-weight: 400;
+        text-transform: uppercase;
+        letter-spacing: 3.6px;
+        margin-top: 20px;
+        margin-bottom: 6px;
+        color: $black;
+
+        @media #{$phone} {
+            @include fsz(18px);
+        }
+    }
+
+    .terms-condition,
+    .form-option,
+    .form__title {
+
+        .bab-form-submitted & {
+            display: none;
+        }
+    }
+
+    .form-holder {
+
+        .bab-form-submitted & {
+            width: auto;
+        }
+    }
 }
 
 .contact-block__title {
@@ -933,9 +969,14 @@
     text-transform: uppercase;
     letter-spacing: 3.6px;
     margin-bottom: 25px;
+
     @media #{$phone} {
         @include fsz(14px);
         margin-bottom: 33px;
+    }
+
+    .bab-form-submitted & {
+        display: none;
     }
 
     strong {
@@ -950,6 +991,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    .bab-form-submitted & {
+        display: block;
+    }
 }
 
 .form-option {
@@ -1008,3 +1053,23 @@
     }
 }
 
+.bab-form__refresh {
+    display: none;
+    color: $black;
+    text-align: center;
+    @include fsz(13px);
+
+    .bab-form-submitted & {
+        display: block;
+    }
+
+    a {
+        color: $black;
+        font-weight: 700;
+
+        &:hover,
+        &:focus {
+            text-decoration: underline;
+        }
+    }
+}
