spinner mobile message

--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -795,7 +795,7 @@
         color: white;
         display: none;
         width: 100%;
-    @media(max-width: 767px), screen and (orientation: portrait) {
+    @media only screen and (max-width: 767px) and (orientation: portrait) {
         display: block;
     }
 }
