--- a/wp-content/themes/intrepid/css/global/typography.scss
+++ b/wp-content/themes/intrepid/css/global/typography.scss
@@ -101,6 +101,11 @@ strong {
 
     ul {
         list-style-type: disc;
+
+        &.gform_fields {
+            list-style: none;
+            padding: 0;
+        }
     }
 
     ol {
