--- a/wp-content/themes/intrepid/css/partials/_header.scss
+++ b/wp-content/themes/intrepid/css/partials/_header.scss
@@ -620,9 +620,11 @@
         margin-bottom: 13px;
     }
 
+    p,
     a {
         @include fsz(14px);
         color: $white;
+        margin: 0;
     }
 }
 
