--- a/wp-content/themes/intrepid/css/partials/build-a-boat.scss
+++ b/wp-content/themes/intrepid/css/partials/build-a-boat.scss
@@ -15,6 +15,10 @@
         top: 71px;
     }
 
+    .translated-ltr & {
+
+    }
+
     .build-a-boat--active & {
         visibility: visible;
         opacity: 1;
