finished BAB mobile

--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -805,6 +805,10 @@
     .container {
         max-width: 1200px;
         padding: 0;
+
+        svg {
+            display: block;
+        }
     }
 }
 
