--- a/wp-content/themes/intrepid/css/templates/model-single.scss
+++ b/wp-content/themes/intrepid/css/templates/model-single.scss
@@ -600,6 +600,7 @@
 
 /* Options */
 .model-option {
+    position: relative;
     padding: 52px 0 22px;
     @media #{$phone} {
         padding: 30px 0 22px;
@@ -607,8 +608,19 @@
 
     &--alt {
         padding: 52px 0 165px;
+
         @media #{$phone} {
-            padding: 0 0 42px;
+            padding: 0 0 80px;
+        }
+
+        .btn--large-mobile {
+
+            @media #{$phone} {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                z-index: 10;
+            }
         }
 
         > .container {
@@ -632,9 +644,27 @@
             }
         }
 
+        &.mobile__active-holder--active {
+
+            .option-title {
+                @media #{$phone} {
+                    display: none;
+                }
+            }
+        }
+
         .option-list {
             @media #{$phone} {
                 display: none;
+            }
+        }
+
+        .model-options--active {
+            .option-list {
+                @media #{$phone} {
+                    display: block;
+                    text-align: left;
+                }
             }
         }
 
@@ -684,9 +714,10 @@
         margin-bottom: 30px;
         font-weight: 700;
         text-transform: uppercase;
+
         @media #{$phone} {
             display: block;
-            margin-bottom: 25px;
+            margin-bottom: 0;
         }
     }
 
@@ -757,6 +788,8 @@
             }
         }
     }
+
+
 }
 
 .option-slider {
@@ -768,6 +801,14 @@
         margin-left: 0;
         margin-bottom: 30px;
         padding-top: 0;
+    }
+
+    .build-a-boat__steps & {
+
+        @media #{$phone} {
+            padding-top: 80px;
+            padding-bottom: 20px;
+        }
     }
 
     .slick-track {
@@ -988,7 +1029,7 @@
     }
 }
 
-.btn-wrap__inner{
+.btn-wrap__inner {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -1024,7 +1065,7 @@
         }
     }
 
-    .gform_wrapper{
+    .gform_wrapper {
         margin: 0 auto;
     }
 }
@@ -1042,7 +1083,7 @@
     }
 }
 
-.form-toggle__email-list{
+.form-toggle__email-list {
     display: none;
 }
 
@@ -1430,7 +1471,7 @@
 
 }
 
-.gallery-grid__bg-video{
+.gallery-grid__bg-video {
     display: block;
     position: absolute;
     left: 0;
@@ -1444,7 +1485,7 @@
     }
 }
 
-.gallery-grid__video-wrap{
+.gallery-grid__video-wrap {
     overflow: hidden;
 }
 
