--- a/wp-content/themes/intrepid/css/partials/__accordion.scss
+++ b/wp-content/themes/intrepid/css/partials/__accordion.scss
@@ -117,7 +117,7 @@
 
 .accordion__panel[aria-hidden="false"] {
     max-height: 100vh;
-    // overflow: auto;
+    overflow: auto;
     padding: 1.25em;
     visibility: visible;
 }
