--- a/wp-content/themes/intrepid/css/templates/model.scss
+++ b/wp-content/themes/intrepid/css/templates/model.scss
@@ -710,6 +710,18 @@
     }
 }
 
+.btn-shortcode--light {
+    display: inline-block;
+    vertical-align: top;
+
+    a {
+        @extend .btn;
+        color: white;
+        border-color: white;
+        text-decoration: none;
+    }
+}
+
 .accordion__container {
     .accordion__heading {
         margin: 20px 0;
