--- a/wp-content/themes/intrepid/css/templates/build-boat.scss
+++ b/wp-content/themes/intrepid/css/templates/build-boat.scss
@@ -148,7 +148,7 @@
             padding-top: 0;
             max-width: 215px;
             margin: 0 auto;
-            text-align: left;
+            // text-align: left;
         }
     }
 
