--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -705,11 +705,19 @@
     }
 
     .spinner__toggle-container {
-        display: none;
-        position: absolute;
-        top: calc((100vh - (580 / 1440 * 100vh)) / 2);
-        right: 5%;
+        position: fixed;
+        width: 90%;
         z-index: 10;
+
+        .spinner__toggle {
+            position: absolute;
+            right: 0;
+            top: 0;
+        }
+    }
+
+    .spinner-view__container {
+        position: relative;
     }
 
     .spinner__toggle {
@@ -733,6 +741,12 @@
 
         }
 
+        &.icon-close {
+            position: absolute;
+            right: calc(5% + 1px);
+            z-index: 10;
+        }
+
         &.spinner__toggle--bg {
             right: 0;
             top: 0;
@@ -748,8 +762,35 @@
     }
 }
 
-.spinner__inner {
-    position: relative;
+.spinner-view__instructions {
+    position: absolute;
+    left: 20px;
+    right: 20px;
+    transform: translate3d(0, 20px, 0);
+    z-index: 10;
+    pointer-events: none;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 1.3;
+    letter-spacing: 1px;
+    color: $gray;
+    text-align: center;
+
+    @media only screen and (max-width: 767px) and (orientation: portrait) {
+        opacity: 0;
+    }
+
+    @media only screen and (max-width: 767px) and (orientation: landscape) {
+        transform: translate3d(0, 10px, 0);
+        font-size: 14px;
+        opacity: 1;
+    }
+
+    strong {
+        color: #fff;
+        font-weight: 600;
+    }
 }
 
 #spinner-view {
