--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -882,11 +882,27 @@
         padding: 0;
 
         svg {
+            position: relative;
             display: block;
+            z-index: 1;
         }
     }
 }
 
+.bab-image__overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+
+    img {
+        display: block;
+        width: 100%;
+        height: auto;
+    }
+}
 
 .hero__placeholder {
     position: absolute;
