--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -743,8 +743,13 @@
 
         &.icon-close {
             position: absolute;
-            right: calc(5% + 1px);
+            right: 5%;
             z-index: 10;
+            background-color: $dark-gray;
+
+            &:after {
+                background-image: url("images/add-white.svg");
+            }
         }
 
         &.spinner__toggle--bg {
@@ -764,17 +769,18 @@
 
 .spinner-view__instructions {
     position: absolute;
-    left: 20px;
-    right: 20px;
-    transform: translate3d(0, 20px, 0);
+    width: 90%;
+    left: 5%;
+    padding: 8px;
     z-index: 10;
     pointer-events: none;
     text-transform: uppercase;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 1.3;
     letter-spacing: 1px;
     color: $gray;
+    background-color: $dark-gray;
     text-align: center;
 
     @media only screen and (max-width: 767px) and (orientation: portrait) {
@@ -783,7 +789,6 @@
 
     @media only screen and (max-width: 767px) and (orientation: landscape) {
         transform: translate3d(0, 10px, 0);
-        font-size: 14px;
         opacity: 1;
     }
 
