--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -22,7 +22,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 39%, rgba(7, 11, 22, 0.83) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        background: linear-gradient(to bottom, rgba(7, 11, 22, 0.1) 39%, rgba(7, 11, 22, 0.83) 100%);
         z-index: 2;
 
         @media #{$phone} {
