--- a/wp-content/themes/intrepid/css/templates/model-single.scss
+++ b/wp-content/themes/intrepid/css/templates/model-single.scss
@@ -811,6 +811,12 @@
         }
     }
 
+    .slick-list {
+        margin-top: -60px;
+        padding-top: 60px;
+        z-index: 10;
+    }
+
     .slick-track {
         margin: 0;
     }
@@ -937,6 +943,7 @@
                 height: 98px;
                 background-size: cover;
                 border: 1px solid black;
+                z-index: 20;
             }
         }
 
