fixed boat name

--- a/wp-content/themes/intrepid/css/templates/build-boat.scss
+++ b/wp-content/themes/intrepid/css/templates/build-boat.scss
@@ -954,6 +954,7 @@
     position: absolute;
     right: 13px;
     top: 13px;
+    z-index: 2;
 }
 
 .custom-hero__content {
@@ -961,6 +962,7 @@
     top: 27px;
     left: 15px;
     display: none;
+    z-index: 2;
 
     .build-a-boat--end & {
         display: block;
