--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -768,6 +768,7 @@
 }
 
 .spinner-view__instructions {
+    display: none;
     position: absolute;
     width: 90%;
     left: 5%;
@@ -778,7 +779,7 @@
     font-weight: 600;
     font-size: 14px;
     line-height: 1.3;
-    letter-spacing: 1px;
+    letter-spacing: 2.5px;
     color: $gray;
     background-color: $dark-gray;
     text-align: center;
