add bullet to ul in content block

--- a/wp-content/themes/intrepid/css/templates/model.scss
+++ b/wp-content/themes/intrepid/css/templates/model.scss
@@ -813,6 +813,11 @@
             text-align: center;
             font-size: 14px;
         }
+
+        ul{
+            list-style: inside;
+        }
+
     }
 
     .content-block__title {
