--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -54,7 +54,12 @@
 
     #heroVideo iframe {
         width: 100vw;
-        height: 56.25vw;
+        height: calc(56.25vw + 60px);
+        margin-top: -60px;
+
+        .ytp-chrome-top{
+            display: none;
+        }
 
         @media #{$phone} {
             width: 200vw;
@@ -921,4 +926,9 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+}
+
+
+.ytp-chrome-top{
+    display: none;
 }
