add dark option for button shortcode

--- a/wp-content/themes/intrepid/css/templates/model.scss
+++ b/wp-content/themes/intrepid/css/templates/model.scss
@@ -867,6 +867,17 @@
     }
 }
 
+.btn-shortcode--dark {
+    display: inline-block;
+    vertical-align: top;
+
+    a {
+        @extend .btn;
+        @extend .btn--dark;
+    }
+}
+
+
 .accordion__container {
     .accordion__heading {
         margin: 20px 0;
