--- a/wp-content/plugins/instagram-feed-pro/css/sb-instagram.css
+++ b/wp-content/plugins/instagram-feed-pro/css/sb-instagram.css
@@ -1517,8 +1517,8 @@ body:after {
 .sbi_header_text .sbi_bio_info{
     padding: 0 !important;
 }
-.sbi_bio_info span{
-    padding-right: 10px;
+.sbi_bio_info span + span {
+    margin-left: 10px;
 }
 #sb_instagram .sbi_bio{
     line-height: 1;
@@ -1537,7 +1537,8 @@ body:after {
 }
 
 /* Hashtag header */
-.sbi_header_type_generic .sbi_header_img{
+.sbi_header_type_generic .sbi_header_img,
+.sbi_no_avatar .sbi_header_img{
     background: #333;
     color: #fff;
     width: 50px;
@@ -1547,26 +1548,27 @@ body:after {
 .sbi_header_type_generic .sbi_no_bio{
     padding-top: 9px !important;
 }
-.sbi_header_type_generic .sbi_header_hashtag_icon{
+.sbi_header_type_generic .sbi_header_hashtag_icon,
+.sbi_no_avatar .sbi_header_hashtag_icon {
     display: block;
     color: #fff;
-    opacity: 0.9;
-
-    -webkit-transition: background 0.6s linear, color 0.6s linear;
-    -moz-transition: background 0.6s linear, color 0.6s linear;
-    -ms-transition: background 0.6s linear, color 0.6s linear;
-    -o-transition: background 0.6s linear, color 0.6s linear;
-    transition: background 0.6s linear, color 0.6s linear;
+    opacity: .9;
+    -webkit-transition: background .6s linear,color .6s linear;
+    -moz-transition: background .6s linear,color .6s linear;
+    -ms-transition: background .6s linear,color .6s linear;
+    -o-transition: background .6s linear,color .6s linear;
+    transition: background .6s linear,color .6s linear
 }
-.sbi_header_type_generic:hover .sbi_header_hashtag_icon{
+
+.sbi_header_type_generic:hover .sbi_header_hashtag_icon,
+.sbi_no_avatar:hover .sbi_header_hashtag_icon {
     display: block;
     opacity: 1;
-
-    -webkit-transition: background 0.2s linear, color 0.2s linear;
-    -moz-transition: background 0.2s linear, color 0.2s linear;
-    -ms-transition: background 0.2s linear, color 0.2s linear;
-    -o-transition: background 0.2s linear, color 0.2s linear;
-    transition: background 0.2s linear, color 0.2s linear;
+    -webkit-transition: background .2s linear,color .2s linear;
+    -moz-transition: background .2s linear,color .2s linear;
+    -ms-transition: background .2s linear,color .2s linear;
+    -o-transition: background .2s linear,color .2s linear;
+    transition: background .2s linear,color .2s linear
 }
 
 
@@ -2576,6 +2578,15 @@ body:after {
     transition: opacity 0.2s ease-in-out;
 }
 
+/* Remove header shadow/border */
+#sb_instagram .sbi_header_link {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+#sb_instagram .sbi_header_link:hover {
+    border: none;
+}
+
 /* Header hover transition */
 .sb_instagram_header.sbi_story .sbi_header_img img {
     height: auto;
@@ -2672,4 +2683,21 @@ body:after {
 #sb_instagram .sbi_frontend_notice .sbi_close_notice:hover,
 #sb_instagram .sbi_frontend_notice .sbi_close_notice:active{
     color: #333;
+}
+#sb_instagram #sbi_mod_error .sb_frontend_btn{
+    display: inline-block;
+    padding: 6px 10px;
+    background: #ddd;
+    background: rgba(0,0,0,0.1);
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 10px;
+    color: #444;
+}
+#sb_instagram #sbi_mod_error .sb_frontend_btn:hover{
+    background: #ccc;
+    background: rgba(0,0,0,0.15);
+}
+#sb_instagram #sbi_mod_error .sb_frontend_btn .fa{
+    margin-right: 2px;
 }
