--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -890,9 +890,18 @@
 }
 
 .custom-hero {
+    position: relative;
+    overflow: hidden;
+
     .container {
         max-width: 1200px;
         padding: 0;
+        transform-origin: 0% 80%;
+        transition: transform 0.5s ease;
+
+        .BAB-motor-view-active & {
+            transform: scale(1.75);
+        }
 
         svg {
             position: relative;
