--- a/wp-content/themes/intrepid/css/templates/build-boat.scss
+++ b/wp-content/themes/intrepid/css/templates/build-boat.scss
@@ -1253,3 +1253,37 @@
         }
     }
 }
+
+.bab-lazy-load-screen {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 422px;
+    z-index: 20;
+    background: white;
+
+    @media (max-width: 1200px) {
+        height: calc(844/2400 * 100vw);
+    }
+
+    p {
+        letter-spacing: 2.5px;
+        font-weight: 600;
+        font-size: 14px;
+
+        &:before {
+            content: '';
+            display: block;
+            width: 69px;
+            height: 70px;
+            background: url(images/icon-all-models-grey.png) no-repeat center center;
+            background-size: cover;
+            margin: 0 auto 15px;
+        }
+    }
+}
+
+#bab-lazy-load-container {
+    display: none;
+}
