--- a/wp-content/themes/intrepid/css/templates/portal-gallery.scss
+++ b/wp-content/themes/intrepid/css/templates/portal-gallery.scss
@@ -74,3 +74,15 @@
 .portal-gallery__upload-prompt{
     font-weight: bold;
 }
+
+.bbp-username{
+    select{
+        width: 100%;
+        padding: 5px;
+    }
+
+}
+
+.bbp-hullnumber{
+    display: none;
+}
