add fields to bbpress forum registration form

--- a/wp-content/themes/intrepid/css/global/typography.scss
+++ b/wp-content/themes/intrepid/css/global/typography.scss
@@ -239,3 +239,12 @@ strong {
         text-align: center;
     }
 }
+
+
+.error-feedback{
+    margin: 20px auto;
+    color: red;
+    font-weight: bold;
+    text-align: center;
+
+}
